--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 	<body>
 		<script src="./js/libs/utils.js"></script>
 		<script src="../build/clmtrackr.js"></script>
-		<script src="../models/model_pca_20_svm.js"></script>
+		<script src="../models/model1.js"></script>
 		<script src="./js/libs/Stats.js"></script>
 		<script src="./js/libs/d3.min.js"></script>
 		<script src="./js/emotion_classifier.js"></script>
