--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
 			}
 
 		</style>
+		
+
 		<script>
 			// getUserMedia only works over https in Chrome 47+, so we redirect to https. Also notify user if running from file.
 			if (window.location.protocol == "file:") {
@@ -128,8 +130,8 @@
 		<script src="./js/emotion_classifier.js"></script>
 		<script src="./js/emotionmodel.js"></script>
 		<div id="content">
-			<h2>Emotion detection example</h2>
-			<p>This a test of emotion detection based on parameter output from <em>clmtrackr</em>.</p>
+			<h2>Hey there </h2>
+			<p>the reason you have being directed to this page cause you are trying to detect your mood and find help.</p>
 			<div id="container">
 				<video id="videoel" width="400" height="300" preload="auto" loop playsinline autoplay>
 				</video>
@@ -145,8 +147,42 @@
 				<div id='emotion_chart'></div>
 			</div>
 			<div id="controls">
-				<input class="btn" type="button" value="wait, loading video" disabled="disabled" onclick="startVideo()" id="startbutton"></input>
+				<input class="btn" type="button" value="wait, loading video" onclick="startVideo()" disabled="enablestart" id="startbutton"></input>
 			</div>
+			<div class="emotionModel"></div>
+
+			<script>
+				var emotionModel = {
+					sProp: 'angry',
+					numProp: 2,
+					bProp: false
+				};
+				//document.getElementById("emotionModel").innerHTML = "google.com" + window.location.href;
+				var emotionModel = {
+					sProp: 'sad',
+					numProp: 2,
+					bProp: false
+				};
+				//document.getElementById("emotionModel").innerHTML = "google.com" + window.location.href;
+				var emotionModel = {
+					sProp: 'fear',
+					numProp: 2,
+					bProp: false
+				};
+				//document.getElementById("emotionModel").innerHTML = "google.com" + window.location.href;
+				var emotionModel = {
+					sProp: 'surprised',
+					numProp: 2,
+					bProp: false
+				};
+				//document.getElementById("emotionModel").innerHTML = "google.com" + window.location.href;
+			
+				
+				</script>
+
+
+			
+			</script>
 			<script>
 				var vid = document.getElementById('videoel');
 				var vid_width = vid.width;
