--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
 		</script>
 	</head>
 	<body>
+<script>
+// onclick event is assigned to the #button element.
+document.getElementById("button").onclick = function() {
+  window.location.href = "https://www.example.com";
+};
+</script>
 		<script src="./js/libs/utils.js"></script>
 		<script src="../build/clmtrackr.js"></script>
 		<script src="../models/model1.js"></script>
@@ -129,8 +135,13 @@
 		<script src="./js/emotionmodel.js"></script>
 		<div id="content">
 			<h2>Emotion detection example</h2>
-			<p>This a test of emotion detection based on parameter output from <em>clmtrackr</em>.</p>
-			<div id="container">
+            <p> <a style="text-decoration:none;cursor: default" href="javascript:void(0);" onclick="window.location.href='http://localhost:5000'">This a test of emotion detection based on parameter output from <em>clmtrackr</em>.</a></p>
+            
+          
+		<button style="visibility: hidden" id="button" class="regular" name="edit" onclick="javascript:location.href='http://www.uol.com.br/">
+        <img src="dba_images/textfield_key.png" alt=""/>
+        Edit
+    </button>	<div id="container">
 				<video id="videoel" width="400" height="300" preload="auto" loop playsinline autoplay>
 				</video>
 				<canvas id="overlay" width="400" height="300"></canvas>
