untrack vendor directory

--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
         <canvas id='canvas' width="800" height="350"></canvas>
         <br>
         <br>
-        <audio src="assets/sample.mp3" id="audio" controls>audio element not supported</audio>
+        <audio src="/hello_world.mp3" id="audio" controls>audio element not supported</audio>
         <script src="main.js"></script>
     </body>
     <script>
