--- a/test/index.html
+++ b/test/index.html
@@ -244,7 +244,7 @@
             });
         </script>
     </div>
-        <audio src="https://bemyfr1end.herokuapp.com/test2.wav" id="audio" controls>audio element not supported</audio>
+        <audio crossOrigin="anonymous" src="https://bemyfr1end.herokuapp.com/test2.wav" id="audio" controls>audio element not supported</audio>
         <script src="main.js"></script>
     </body>
     <script>
