--- a/test/index3.html
+++ b/test/index3.html
@@ -13,6 +13,16 @@
         async function playAudio() {
   var audio = new Audio('https://bemyfr1end.herokuapp.com/test2.wav');  
   audio.type = 'audio/wav';
+            var ctx = new AudioContext();
+    var analyser = ctx.createAnalyser();
+    var audioSrc = ctx.createMediaElementSource(audio);
+    // we have to connect the MediaElementSource with the analyser 
+    audioSrc.connect(analyser);
+    analyser.connect(ctx.destination);
+    // we could configure the analyser: e.g. analyser.fftSize (for further infos read the spec)
+    // analyser.fftSize = 64;
+    // frequencyBinCount tells you how many values you'll receive from the analyser
+    var frequencyData = new Uint8Array(analyser.frequencyBinCount);
 
   try {
     await audio.play();
