--- a/test/index3.html
+++ b/test/index3.html
@@ -10,6 +10,9 @@
 <body>
     <a href="#" onclick="playAudio()">Play Audio</a>
     <script type="text/javascript">
+        
+        window.AudioContext = window.AudioContext || window.webkitAudioContext || window.mozAudioContext;
+        
         async function playAudio() {
   var audio = new Audio('https://bemyfr1end.herokuapp.com/test2.wav');  
   audio.type = 'audio/wav';
