--- a/test/index5.html
+++ b/test/index5.html
@@ -9,7 +9,7 @@ div#mp3_player > canvas{ width:500px; height:30px; background:#002D3C; float:lef
 <script>
 // Create a new instance of an audio object and adjust some of its properties
 var audio = new Audio();
-audio.src = 'track1.mp3';
+audio.src = '/hello_world.mp3';
 audio.controls = true;
 audio.loop = true;
 audio.autoplay = true;
