--- a/test/index5.html
+++ b/test/index5.html
@@ -20,7 +20,8 @@ var canvas, ctx, source, context, analyser, fbc_array, bars, bar_x, bar_width, b
 window.addEventListener("load", initMp3Player, false);
 function initMp3Player(){
 	document.getElementById('audio_box').appendChild(audio);
-	context = new webkitAudioContext(); // AudioContext object instance
+	context = new AudioContext();
+	//context = new webkitAudioContext(); // AudioContext object instance
 	analyser = context.createAnalyser(); // AnalyserNode method
 	canvas = document.getElementById('analyser_render');
 	ctx = canvas.getContext('2d');
