--- a/project/index2.html
+++ b/project/index2.html
@@ -13,7 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript">
         $.ajax({
-            url: 'get.php',
+            url: 'https://bemyfr1end.herokuapp.com/index3.php',
             data: { attr1: 'value1' },
             success: function( data ) {
                 console.log(data);
