--- a/project/index2.html
+++ b/project/index2.html
@@ -18,6 +18,7 @@
             success: function( data ) {
                 console.log(data);
                 $('audio #source').attr('src', data);
+				$('audio #source').attr('crossOrigin' , 'anonymous');
                 $('audio').get(0).load();
                 $('audio').get(0).play();
             }
