--- a/project/index1.html
+++ b/project/index1.html
@@ -214,7 +214,7 @@ canvas { border: 1px solid black; display: block; }
 			
         </div>
         <form id="mensagem" class="mensagem">
-            <input type="text" id="texto" name="texto" placeholder="Digite sua mensagem" />
+            <input type="text" id="texto" name="texto" placeholder="Place Type Your Message Here" />
             <button type="submit">Enviar</button>
         </form>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
