--- a/project/index1.html
+++ b/project/index1.html
@@ -215,7 +215,7 @@ canvas { border: 1px solid black; display: block; }
         </div>
         <form id="mensagem" class="mensagem">
             <input type="text" id="texto" name="texto" placeholder="Place Type Your Message Here" />
-            <button type="submit">Enviar</button>
+            <button type="submit">Enter</button>
         </form>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script type="text/javascript">
