--- a/project/index1.html
+++ b/project/index1.html
@@ -242,7 +242,7 @@ canvas { border: 1px solid black; display: block; }
                 //Inicia método AJAX
                 $.ajax({
                     type: 'POST',
-                    url: "https://api.eu-gb.assistant.watson.cloud.ibm.com/instances/cdaa8ff3-b6fb-4ac3-920b-61df16e256f4/v1/workspaces/d77a5f46-30c4-42b8-891d-9c53b602424e/message",
+                    url: "https://bemyfr1end.herokuapp.com/index1.php",
                     dataType: 'json', // Determina o tipo de retorno
                     contentType: 'application/json',
                     data: gambi,
