--- a/project/index1.html
+++ b/project/index1.html
@@ -220,9 +220,12 @@ canvas { border: 1px solid black; display: block; }
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script type="text/javascript">
             $("#mensagem").submit(function () {
+				
                 if ($("#mensagem #texto").val() === "") {
                     $("#chat").append("<div class=\"texto usuario\">...</div>");
                     $(".mensagens").animate({ scrollTop: $("#chat").height() });
+					var e = document.getElementById("mensagem");
+					e.id = "ape";
                     setTimeout(function () {
                         //Adiciona uma resposta padrão afirmando que o usuário deixou o campo vazio
                         $("#chat").append("<div class=\"texto chatbot\">Unfortunely I didn't get that. Please try again</div>");
@@ -239,6 +242,7 @@ canvas { border: 1px solid black; display: block; }
                     }
                 });
                 console.log(gambi);
+				
                 //Inicia método AJAX
                 $.ajax({
                     type: 'POST',
