--- a/project/index1.html
+++ b/project/index1.html
@@ -259,10 +259,10 @@ canvas { border: 1px solid black; display: block; }
                         $("#chat").append("<div class=\"texto usuario\">" + $("#mensagem #texto").val() + "</div>");
                     },
                     success: function (resposta) {
-						var e = document.getElementById("mensagem");
-					e.id = "ape";
-					var f = document.getElementById("texto");
-					f.id = "dude";
+					//	var e = document.getElementById("mensagem");
+					//e.id = "ape";
+					//var f = document.getElementById("texto");
+					//f.id = "dude";
                         $("#mensagem #texto").val("");
                         $("#mensagem #texto").focus();
 
