--- a/project/index1.html
+++ b/project/index1.html
@@ -272,7 +272,7 @@ canvas { border: 1px solid black; display: block; }
                             $("#chat").append("<div class=\"texto chatbot\">" + resposta.error + "</div>");
                             return false;
                         }
-						var cookie1 = "sussion_id="+ resposta.session_id;
+						var cookie1 = "session_id="+ resposta.session_id;
 						//var cookie2 = "JSESSIONID=" + resp.sessionid;
 						document.cookie = cookie1;
 						//document.cookie = cookie2;
