--- a/project/index1.html
+++ b/project/index1.html
@@ -279,6 +279,7 @@ canvas { border: 1px solid black; display: block; }
 						var xy = document.cookie;
                         var mensagemChatbot = "<div class=\"texto chatbot\">";
                         mensagemChatbot += xy;
+						mensagemChatbot += " ";
 						mensagemChatbot += resposta.message;
                         mensagemChatbot += "</div>";
                         setTimeout(function () {
