--- a/project/index1.html
+++ b/project/index1.html
@@ -252,7 +252,7 @@ canvas { border: 1px solid black; display: block; }
                 //Inicia método AJAX
                 $.ajax({
                     type: 'POST',
-                    url: "https://bemyfr1end.herokuapp.com/index4.php",
+                    url: "https://bemyfr1end.herokuapp.com/index4.php?session="+xy,
                     dataType: 'json', // Determina o tipo de retorno
                     contentType: 'application/json',
                     data: gambi,
