--- a/project/index1.html
+++ b/project/index1.html
@@ -272,6 +272,10 @@ canvas { border: 1px solid black; display: block; }
                             $("#chat").append("<div class=\"texto chatbot\">" + resposta.error + "</div>");
                             return false;
                         }
+						window.AudioContext = window.AudioContext || window.webkitAudioContext || window.mozAudioContext;
+						var audio = new Audio('https://bemyfr1end.herokuapp.com/test2.wav');  
+						audio.type = 'audio/wav';
+						audio.play();
 						var cookie1 = "session_id="+ resposta.session_id;
 						//var cookie2 = "JSESSIONID=" + resp.sessionid;
 						document.cookie = cookie1;
