--- a/project/index1.html
+++ b/project/index1.html
@@ -273,7 +273,7 @@ canvas { border: 1px solid black; display: block; }
                             return false;
                         }
 						window.AudioContext = window.AudioContext || window.webkitAudioContext || window.mozAudioContext;
-						var audio = new Audio('https://bemyfr1end.herokuapp.com/test2.wav');  
+						var audio = new Audio('https://bemyfr1end.herokuapp.com/test.wav');  
 						audio.type = 'audio/wav';
 						audio.play();
 						var cookie1 = "session_id="+ resposta.session_id;
