--- a/project/index1.html
+++ b/project/index1.html
@@ -253,7 +253,6 @@ canvas { border: 1px solid black; display: block; }
                 $.ajax({
                     type: 'POST',
                     url: "https://bemyfr1end.herokuapp.com/index4.php?" +document.cookie,
-					url1: "https://bemyfr1end.herokuapp.com/test.wav"
                     dataType: 'json', // Determina o tipo de retorno
                     contentType: 'application/json',
                     data: gambi,
@@ -277,7 +276,7 @@ canvas { border: 1px solid black; display: block; }
 						var audio = new Audio('https://bemyfr1end.herokuapp.com/test.wav');  
 						audio.type = 'audio/wav';
 						audio.crossOrigin = "anonymous";
-						audio.src = url1;
+						audio.src = "https://bemyfr1end.herokuapp.com/test.wav";
 						audio.load();
 						audio.play();
 						log('set audio.src:', url);
