--- a/project/index1.html
+++ b/project/index1.html
@@ -303,7 +303,7 @@ canvas { border: 1px solid black; display: block; }
                         throw 'Failed to fetch the file';
                 }
             } catch (e) {
-                console.error(e);
+              //  console.error(e);
             }
         };
         xhr.send();
