--- a/project/index1.html
+++ b/project/index1.html
@@ -309,7 +309,7 @@ canvas { border: 1px solid black; display: block; }
         xhr.send();
     });
 } catch (e) {
-    console.error(e);
+   // console.error(e);
 }
                         $("#mensagem #texto").val("");
                         $("#mensagem #texto").focus();
