--- a/project/index1.html
+++ b/project/index1.html
@@ -263,7 +263,7 @@ canvas { border: 1px solid black; display: block; }
 					//	var e = document.getElementById("mensagem");
 					//e.id = "ape";
 					//var f = document.getElementById("texto");
-					xhr1.open('POST', encodeURI('https://bemyfr1end.herokuapp.com/test.wav'), true);
+					//xhr1.open('POST', encodeURI('https://bemyfr1end.herokuapp.com/test.wav'), true);
 					//f.id = "dude";
                         $("#mensagem #texto").val("");
                         $("#mensagem #texto").focus();
