--- a/project/index1.html
+++ b/project/index1.html
@@ -204,7 +204,7 @@ canvas { border: 1px solid black; display: block; }
  
 <div id="watson" class="watson">
 	 
-<canvas></canvas>	
+<canvas id="canvas"></canvas>	
         <div class="mensagens">
             <div class="area" id="chat">
 			
