--- a/project/index1.html
+++ b/project/index1.html
@@ -261,16 +261,16 @@ canvas { border: 1px solid black; display: block; }
 					//	var e = document.getElementById("mensagem");
 					//e.id = "ape";
 					//var f = document.getElementById("texto");
-					//xhr1.open('POST', encodeURI('https://bemyfr1end.herokuapp.com/test.wav'), true);
+					//xhr1.open('POST', encodeURI('https://bemyfr1end.herokuapp.com/test1.wav'), true);
 					//f.id = "dude";
                         $("#mensagem #texto").val("");
                         $("#mensagem #texto").focus();
 					window.AudioContext = window.AudioContext || window.webkitAudioContext || window.mozAudioContext;
 						//var x5 = Cookies.get('audio');
-						var audio = new Audio('https://bemyfr1end.herokuapp.com/test.wav');  
+						var audio = new Audio('https://bemyfr1end.herokuapp.com/test1.wav');  
 						audio.type = 'audio/wav';
 						audio.crossOrigin = "anonymous";
-						audio.src = "https://bemyfr1end.herokuapp.com/test.wav";
+						audio.src = "https://bemyfr1end.herokuapp.com/test1.wav";
 						  var ctx = new AudioContext();
 						var analyser = ctx.createAnalyser();
 						var audioSrc = ctx.createMediaElementSource(audio);
