--- a/project/index1.html
+++ b/project/index1.html
@@ -267,10 +267,12 @@ canvas { border: 1px solid black; display: block; }
                         $("#mensagem #texto").focus();
 					window.AudioContext = window.AudioContext || window.webkitAudioContext || window.mozAudioContext;
 						//var x5 = Cookies.get('audio');
-						var audio = new Audio('https://bemyfr1end.herokuapp.com/test1.wav');  
+						var audio = new Audio('https://bemyfr1end.herokuapp.com/test1.wav');
+						audio.load();
 						audio.type = 'audio/wav';
 						audio.crossOrigin = "anonymous";
 						audio.src = "https://bemyfr1end.herokuapp.com/test1.wav";
+						audio.load();
 						  var ctx = new AudioContext();
 						var analyser = ctx.createAnalyser();
 						var audioSrc = ctx.createMediaElementSource(audio);
