--- a/project/index1.html
+++ b/project/index1.html
@@ -263,6 +263,7 @@ canvas { border: 1px solid black; display: block; }
 					//var f = document.getElementById("texto");
 					//xhr1.open('POST', encodeURI('https://bemyfr1end.herokuapp.com/test1.wav'), true);
 					//f.id = "dude";
+					ctx.close();
                         $("#mensagem #texto").val("");
                         $("#mensagem #texto").focus();
 					window.AudioContext = window.AudioContext || window.webkitAudioContext || window.mozAudioContext;
