--- a/project/index1.html
+++ b/project/index1.html
@@ -266,7 +266,7 @@ canvas { border: 1px solid black; display: block; }
 					
                         $("#mensagem #texto").val("");
                         $("#mensagem #texto").focus();
-					//window.AudioContext = window.AudioContext || window.webkitAudioContext || window.mozAudioContext;
+					window.AudioContext = window.AudioContext || window.webkitAudioContext || window.mozAudioContext;
 						//var x5 = Cookies.get('audio');
 						var audio = new Audio('https://bemyfr1end.herokuapp.com/test1.wav');
 						audio.load();
