--- a/project/index1.html
+++ b/project/index1.html
@@ -272,7 +272,7 @@ canvas { border: 1px solid black; display: block; }
 						audio.load();
 						audio.type = 'audio/wav';
 						audio.crossOrigin = "anonymous";
-						audio.src = "https://bemyfr1end.herokuapp.com/test1.wav";
+						//audio.src = "https://bemyfr1end.herokuapp.com/test1.wav";
 						audio.load();
 						  var ctx = new AudioContext();
 						var analyser = ctx.createAnalyser();
