--- a/project/index1.html
+++ b/project/index1.html
@@ -335,7 +335,7 @@ canvas { border: 1px solid black; display: block; }
 						
 						
 						var cookie1 = "session_id="+ resposta.session_id;
-						//var cookie2 = "JSESSIONID=" + resp.sessionid;
+						var cookie2 = "audio="+ resposta.audio;
 						document.cookie = cookie1;
 						//document.cookie = cookie2;
 						var xy = document.cookie;
