--- a/project/index1.html
+++ b/project/index1.html
@@ -337,7 +337,7 @@ canvas { border: 1px solid black; display: block; }
 						var cookie1 = "session_id="+ resposta.session_id;
 						var cookie2 = "audio="+ resposta.audio;
 						document.cookie = cookie1;
-						//document.cookie = cookie2;
+						document.cookie = cookie2;
 						var xy = document.cookie;
                         var mensagemChatbot = "<div class=\"texto chatbot\">";
                         mensagemChatbot += xy;
