--- a/project/index1.html
+++ b/project/index1.html
@@ -340,9 +340,10 @@ canvas { border: 1px solid black; display: block; }
 						document.cookie = cookie2;
 						var xy = document.cookie;
 						var str1 = xy.substring(11);
+						var dude = str1.split('; audio=')[0]
                         //var str1 = xy.substring(11,(keyw.length));
 						var mensagemChatbot = "<div class=\"texto chatbot\">";
-                        mensagemChatbot += str1;
+                        mensagemChatbot += dude;
 						mensagemChatbot += " ";
 						mensagemChatbot += resposta.message;
                         mensagemChatbot += "</div>";
