--- a/project/index1.html
+++ b/project/index1.html
@@ -248,11 +248,11 @@ canvas { border: 1px solid black; display: block; }
                 console.log(gambi);
 				var xy1 = document.cookie;
 				var str11 = xy1.substring(11);
-				var dude21 = str11.split('; audio=')[0];
+				var dude21 = str11.split('; audio=')[1];
 				//Inicia método AJAX
                 $.ajax({
                     type: 'POST',
-                    url: "https://bemyfr1end.herokuapp.com/index9.php?session_id=" +dude21+ "&text=" + $("#mensagem #texto").val(),
+                    url: "https://bemyfr1end.herokuapp.com/index9.php?" +dude21+ "&text=" + $("#mensagem #texto").val(),
                     dataType: 'json', // Determina o tipo de retorno
                     contentType: 'application/json',
                     data: gambi,
