--- a/project/index1.html
+++ b/project/index1.html
@@ -340,7 +340,7 @@ canvas { border: 1px solid black; display: block; }
 						var cookie1 = "session_id="+ resposta.session_id;
 						//var cookie2 = "audio="+ resposta.audio;
 						document.cookie = cookie1;
-						document.cookie = cookie2;
+						//document.cookie = cookie2;
 						var xy = document.cookie;
 						var str1 = xy.substring(11);
 						var dude2 = str1.split('; audio=')[1];
