--- a/project/index1.html
+++ b/project/index1.html
@@ -220,7 +220,7 @@ canvas { border: 1px solid black; display: block; }
 		
 		$(document).ready(function(){
     $.ajax({
-        url: 'https://makitweb.com/demo/ajaxjson/getData.php',
+        url: 'https://bemyfr1end.herokuapp.com/index11.php',
         type: 'get',
         dataType: 'JSON',
         success: function(response){
