--- a/project/index1.html
+++ b/project/index1.html
@@ -358,8 +358,8 @@ canvas { border: 1px solid black; display: block; }
 						//document.cookie = cookie2;
 						var xy = document.cookie;
                         var mensagemChatbot = "<div class=\"texto chatbot\">";
-                        mensagemChatbot += xy;
-						mensagemChatbot += " ";
+                        //mensagemChatbot += xy;
+						//mensagemChatbot += " ";
 						mensagemChatbot += resposta.message;
                         mensagemChatbot += "</div>";
                         setTimeout(function () {
