--- a/index.html
+++ b/index.html
@@ -16,3 +16,4 @@ layout: default
     </article>
   {% endfor %}
 </div>
+<script src="https://code.responsivevoice.org/responsivevoice.js?key=Sru5IhRU"></script>
