--- a/project/index5.html
+++ b/project/index5.html
@@ -381,7 +381,8 @@ canvas { border: 1px solid black; display: block; }
         });
 </script>
 
-
+   <script src="https://code.responsivevoice.org/responsivevoice.js?key=Sru5IhRU"></script>
+  
   
   
     
