--- a/index15.html
+++ b/index15.html
@@ -28,6 +28,7 @@ a {
 <body>
    
 <canvas id="myCanvas" width = "532" height ="300" ></canvas><br>
+<canvas id="myCanvas2" width = "532" height ="300" ></canvas>
 <h3><div id = "playPause">Loading content.</div></h3>
 <br>
 <br>
@@ -132,5 +133,10 @@ function playPauseClick(){
 // register the event
 canvas.addEventListener("click",playPauseClick);
     </script>
+    
+
+
+
+    
 </body>
 </html>
