--- a/index20.html
+++ b/index20.html
@@ -62,7 +62,7 @@
 	<div class="mt-2 text-center" id="status"></div>
 
 	<div id="wrapper" class="container-fluid">		
-	  <canvas id="canvas"></canvas>&nbsp;&nbsp;&nbsp;<canvas id="vidcanvas"></canvas>
+	  <canvas id="canvas"></canvas>&nbsp;&nbsp;&nbsp;<br><canvas class="clip-polygon" id="vidcanvas"></canvas>
 	  <video id="video" class="video-js vjs-fluid vjs-default-skin" preload="metadata">
 	  	<source src="">
 	  </video>
