--- a/index20.html
+++ b/index20.html
@@ -95,15 +95,15 @@
         </div>
         <div class="column" style="background-color:#000000; min-height: 800px;">
           <!--  <canvas class="clip-polygon" id="vidcanvas"></canvas>-->
-          <section id="demos" class="invisible">
+          <section id="demos" height="1290" class="invisible">
             <div id="liveView" class="videoView">
                <button id="webcamButton" class="mdc-button mdc-button--raised">
                  <span class="mdc-button__ripple"></span>
                  <span class="mdc-button__label">ENABLE WEBCAM</span>
                </button>
                <div style="position: relative;">
-                 <video id="webcam" style="width: 100%; position: abso" autoplay playsinline></video>
-                 <canvas class="output_canvas" id="output_canvas" width="1280" height="720" style="position: absolute; left: 0px; top: 0px;"></canvas>
+                 <video id="webcam" style="width: 100%; height:1290; position: abso" autoplay playsinline></video>
+                 <canvas class="output_canvas" id="output_canvas" width="720" height="1280" style="position: absolute; left: 0px; top: 0px;"></canvas>
                </div>
              </div>
            </section>
@@ -203,6 +203,7 @@
         console.log(programming);
         }else{
         videoContainer.video.pause();
+        programming = false ;
         }
         }
         }
@@ -308,6 +309,8 @@
                 canvasCtx.restore();
                 if(programming === false){
                 console.log(result.landmarks, PoseLandmarker.POSE_CONNECTIONS);
+            }else{
+
             }
             });
         }
@@ -318,6 +321,9 @@
         }
     }
  
+    if(videoContainer.video.paused){
+        programming = false;
+    }
         </script>
 
 </body>
