--- a/index25.html
+++ b/index25.html
@@ -101,6 +101,76 @@ dataPoints: [
     indexLabel: "right_wrist"
 }
 ]
+},
+{
+type: "line",
+dataPoints: [
+
+{
+    y: -563.5765096437527,
+    x: 419.088953092079,
+    "score": 0.8049867749214172,
+    indexLabel: "left_shoulder"
+},
+{
+    y: -689.1822109132509,
+    x: 431.0846933955858,
+    "score": 0.8640961050987244,
+    indexLabel: "left_hip"
+},
+{
+    y: -702.9775215185546,
+    x: 364.84822861638423,
+    "score": 0.8855389952659607,
+    indexLabel: "right_hip"
+},
+{
+    y: -591.2672479820579,
+    x: 295.2490425422431,
+    "score": 0.8740116357803345,
+    indexLabel: "right_shoulder"
+}
+]
+},{
+type: "line",
+dataPoints: [
+
+{
+    y: -874.853959280996,
+    x: 444.0512174549555,
+    "score": 0.8049867749214172,
+    indexLabel: "left_ankle"
+},{
+    y: -768.0988064115821,
+    x: 406.5349681135893,
+    "score": 0.8049867749214172,
+    indexLabel: "left_knee"
+},
+{
+    y: -689.1822109132509,
+    x: 431.0846933955858,
+    "score": 0.8640961050987244,
+    indexLabel: "left_hip"
+},
+{
+    y: -702.9775215185546,
+    x: 364.84822861638423,
+    "score": 0.8855389952659607,
+    indexLabel: "right_hip"
+},
+{
+    y: -817.031002425374,
+    x: 361.3349711616232,
+    "score": 0.8740116357803345,
+    indexLabel: "right_knee"
+},
+{
+    y: -872.9592009843852,
+    x: 413.87327212083926,
+    "score": 0.8740116357803345,
+    indexLabel: "right_ankle"
+}
+]
 }
 ]         
 });
